--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /OfficialData/
 FilteredFYProdData_2017_18/
 /.idea/
+/20200124FeedbackDataFromNathan/
+/FilesForFTEAggregationProcess/
+/FilesForWebAppRevisions/
