capturing revisions before june 2020 update

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ FilteredFYProdData_2017_18/
 /20200124FeedbackDataFromNathan/
 /FilesForFTEAggregationProcess/
 /FilesForWebAppRevisions/
+.ipynb_checkpoints
